Manage SPA forms
